# cognilateral-trust

./: .gitignore  CHANGELOG.md  CONTACT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bench_results.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docs/: CALIBRATION.md  PRIVACY.md  index.html  nutrition-label-spec-v1.md
docs/specs/: trust-protocol-v1.md
examples/: anthropic_trust_wrapper.py  cognee_trust_layer.py  crewai_trust_tool.py  demo_calibration_loop.py  demo_trust_agent.py  dspy_trust_module.py  github_actions_trust_gate.yml  http_trust_proxy.py  langgraph_trust_agent.py  langgraph_trust_node.py  load_simulator.py  mem0_trust_provider.py  openai_trust_wrapper.py
tests/: test_bench_cli.py  test_bench_scenarios.py  test_calibrated_engine.py  test_calibration_property.py  test_claims.py  test_cli.py  test_cognee_integration.py  test_confidence_extraction.py  test_consensus.py  test_consent.py  test_contagion.py  test_demo_agent.py  test_extractors.py  test_fidelity.py  test_fingerprint.py  test_firewall.py  test_integrations.py  test_leaderboard.py  test_lifecycle.py  test_mcp_server.py  test_middleware.py  test_nutrition.py  test_openclaw_integration.py  test_persistence.py  test_protocol_spec.py  test_protocol_types.py  test_provenance.py  test_routing.py  test_scoring.py  test_sovereign.py  test_sovereignty.py  test_standalone.py  test_trust_decay.py  test_trust_service_integration.py  test_warrants.py
(+47 files in other folders)
