[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognilateral-trust"
version = "0.5.0"
description = "Epistemic trust layer for AI agents — confidence tiers, routing, and accountability"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["trust", "ai", "agents", "epistemic", "confidence", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
trust-check = "cognilateral_trust.cli:main"

[project.urls]
Homepage = "https://cognilateral.com"
Repository = "https://github.com/heymumford/cognilateral-trust"

[tool.hatch.build.targets.wheel]
packages = ["src/cognilateral_trust"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
